virtual machines/ubuntu-minikube/Kubernetes/cardsgo/cardsgo-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cardsgo
  name: cardsgo
  namespace: cardsgo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cardsgo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cardsgo
    spec:
      containers:
      - env:
        - name: containername
          value: cardsgo
        image: aleixolucas/cardsgo
        imagePullPolicy: Always
        name: cardsgo-container
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          limits:
            cpu: 128m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - SYS_NICE
            drop:
            - KILL
          seLinuxOptions:
            level: s0:c123,c456
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
