virtual machines/ubuntu-minikube/Kubernetes/cardsgo/cardsgo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cardsgo
  name: cardsgo
  namespace: 
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: cardsgo
