virtual machines/ubuntu-minikube/Kubernetes/cardsgo/cardsgo-in-ext.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cardsgo-in-ext
  namespace: cardsgo
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      server_name cardsgo.ddns.net;

      ## OWASP 10017
      add_header Content-Security-Policy "default-src 'self'; img-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; font-src 'self'; object-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cardsgo.ddns.net/ https://cdn.jsdelivr.net https://cdn.jsdelivr.net;";
      add_header Strict-Transport-Security "max-age=63072000";

      ## OWASP 10020
      add_header X-Frame-Options sameorigin;

      ## OWASP 10021
      add_header X-Content-Type-Options nosniff;
      add_header X-XSS-Protection "0; mode=block";

      location ~* "(eval\()"  { deny all; }
      location ~* "(127\.0\.0\.1)"  { deny all; }
      location ~* "([a-z0-9]{2000})"  { deny all; }
      location ~* "(javascript\:)(.*)(\;)"  { deny all; }
      location ~* "(base64_encode)(.*)(\()"  { deny all; }
      location ~* "(GLOBALS|REQUEST)(=|\[|%)"  { deny all; }
      location ~* "(<|%3C).*script.*(>|%3)" { deny all; }
      location ~ "(\\|\.\.\.|\.\./|~|`|<|>|\|)" { deny all; }
      location ~* "(boot\.ini|etc/passwd|self/environ)" { deny all; }
      location ~* "(thumbs?(_editor|open)?|tim(thumb)?)\.php" { deny all; }
      location ~* "(\'|\")(.*)(drop|insert|md5|select|union)" { deny all; }
      location ~* "(\'|\")(.*)(DROP|INSERT|MD5|SELECT|UNION)" { deny all; }
      location ~* "(https?|ftp|php):/" { deny all; }
      location ~* "(=\\\'|=\\%27|/\\\'/?)\." { deny all; }
      location ~* "/(\$(\&)?|\*|\"|\.|,|&|&amp;?)/?$" { deny all; }
      location ~ "(\{0\}|\(/\(|\.\.\.|\+\+\+|\\\"\\\")" { deny all; }
      location ~ "(~|`|<|>|:|;|%|\\|\s|\{|\}|\[|\]|\|)" { deny all; }
      location ~* "/(=|\$&|_mm|(wp-)?config\.|cgi-|etc/passwd|muieblack)" { deny all; }
      location ~* "(&pws=0|_vti_|\(null\)|\{\$itemURL\}|echo(.*)kae|etc/passwd|eval\(|self/environ)" { deny all; }
      location ~* "\.(aspx?|bash|bak?|cfg|cgi|dll|exe|git|hg|ini|jsp|log|mdb|out|sql|svn|swp|tar|rdf)$" { deny all; }
      location ~* "/(^$|mobiquo|phpinfo|shell|sqlpatch|thumb|thumb_editor|thumbopen|timthumb|webshell)\.php" { deny all; }

      ## Bloquear SQL injections
      set $block_sql_injections 0;
      if ($request_uri ~ "union.*select.*\(") {
        set $block_sql_injections 1;
      }
      if ($request_uri ~ "union.*all.*select.*") {
        set $block_sql_injections 1;
      }
      if ($request_uri ~ "concat.*\(") {
        set $block_sql_injections 1;
      }
      if ($request_uri ~ "\b(select|drop|insert|sql|concat|md5|union)\b") {
        set $block_sql_injections 1;
      }
      if ($request_uri ~ "\b(SELECT|DROP|INSERT|SQL|CONCAT|MD5|UNION)\b") {
        set $block_sql_injections 1;
      }
      if ($request_body ~ "\b(select|drop|insert|sql|concat|md5|union)\b") {
        set $block_sql_injections 1;
      }
      if ($request_body ~ "\b(SELECT|DROP|INSERT|SQL|CONCAT|MD5|UNION)\b") {
        set $block_sql_injections 1;
      }
      if ($block_sql_injections = 1) {
        return 403;
      }

      ## Block file injections
      set $block_file_injections 0;
      if ($request_uri ~ "[a-zA-Z0-9_]=http://") {
        set $block_file_injections 1;
      }
      if ($request_uri ~ "[a-zA-Z0-9_]=(\.\.//?)+") {
        set $block_file_injections 1;
      }
      if ($request_uri ~ "[a-zA-Z0-9_]=/([a-z0-9_.]//?)+") {
        set $block_file_injections 1;
      }
      if ($block_file_injections = 1) {
        return 403;
      }

      ## Block spam
      set $block_spam 0;
      if ($request_uri ~ "\b(ultram|unicauca|valium|viagra|vicodin|xanax|ypxaieo)\b") {
        set $block_spam 1;
      }
      if ($request_uri ~ "\b(erections|hoodia|huronriveracres|impotence|levitra|libido)\b") {
        set $block_spam 1;
      }
      if ($request_body ~ "\b(erections|hoodia|huronriveracres|impotence|levitra|libido)\b") {
        set $block_spam 1;
      }
      if ($request_uri ~ "\b(ambien|blue\spill|cialis|cocaine|ejaculation|erectile)\b") {
        set $block_spam 1;
      }
      if ($request_uri ~ "\b(lipitor|phentermin|pro[sz]ac|sandyauer|tramadol|troyhamby)\b") {
        set $block_spam 1;
      }
      if ($block_spam = 1) {
        return 403;
      }

      ## Block user agents
      set $block_user_agents 0;

      #Don't disable wget if you need it to run cron jobs!
      if ($http_user_agent ~ "Wget") {
        set $block_user_agents 1;
      }

      # Disable Akeeba Remote Control 2.5 and earlier
      if ($http_user_agent ~ "Indy Library") {
        set $block_user_agents 1;
      }

      # Common bandwidth hoggers and hacking tools.
      if ($http_user_agent ~ "libwww-perl") {
        set $block_user_agents 1;
      }
      if ($http_user_agent ~ "GetRight") {
        set $block_user_agents 1;
      }
      if ($http_user_agent ~ "GetWeb!") {
        set $block_user_agents 1;
      }
      if ($http_user_agent ~ "Go!Zilla") {
        set $block_user_agents 1;
      }
      if ($http_user_agent ~ "Download Demon") {
        set $block_user_agents 1;
      }
      if ($http_user_agent ~ "Go-Ahead-Got-It") {
        set $block_user_agents 1;
      }
      if ($http_user_agent ~ "TurnitinBot") {
        set $block_user_agents 1;
      }
      if ($http_user_agent ~ "GrabNet") {
        set $block_user_agents 1;
      }
      if ($http_user_agent ~ "PostmanRuntime") {
        set $block_user_agents 1;
      }
      if ($http_user_agent ~ "curl") {
        set $block_user_agents 1;
      }

      if ($block_user_agents = 1) {
        return 403;
      }
spec:
  tls:
  - hosts:
    - cardsgo.ddns.net
    secretName: cardsgo-tls
  rules:
  - host: cardsgo.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cardsgo
            port:
              number: 80
