virtual machines/ubuntu-minikube/Kubernetes/cardsgo/cardsgo-in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cardsgo-in
  namespace: cardsgo
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
spec:
  tls:
  - hosts:
    - cardsgo.aleixohome.lan
    secretName: aleixohome-ssl
  rules:
  - host: cardsgo.aleixohome.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cardsgo
            port:
              number: 80
