virtual machines/ubuntu-minikube/Kubernetes/cardsgo/cardsgo-netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cardsgo-cardsgo
  namespace: cardsgo
spec:
  podSelector:
    matchLabels:
      app: cardsgo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 172.17.0.0/16
            except:
              - 172.17.0.0/24
  egress:           
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
